# libredshift

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.c
include/: redshift.h
src/: Makefile  Makefile.am  Makefile.in  colorramp.c  colorramp.h  gamma-drm.h  gamma-dummy.c  gamma-dummy.h  gamma-quartz.h  gamma-randr.c  gamma-randr.h  gamma-vidmode.c  gamma-vidmode.h  gamma-w32gdi.h  hooks.c  hooks.h  location-corelocation.h  location-corelocation.m  location-geoclue.c  location-geoclue.h  location-geoclue2.c  location-geoclue2.h  location-manual.h  redshift.c
src/redshift-gtk/: Makefile  Makefile.in
